--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ h3 {
   padding: 2rem;
   text-align: center;
 }
+.container{
+  width: 60%;
+}
 /* Bar styles */
 .clsStyleProgress {
   width: 100%;
@@ -29,10 +32,17 @@ select {
   color: #000;
   margin: 1rem;
 }
-/* break out point
-   */
-@media only screen and (max-width: 500px) {
-  select {
-    margin-top: 1rem;
+/* break out point */
+@media only screen and (max-width: 700px) {
+  .container{
+    width: 90%;
   }
+  body { background: rgb(245, 188, 165); }
+}
+
+@media only screen and (max-width: 500px) {
+  .container{
+    width: 100%;
+  }
+  body { background: rgba(247, 49, 49, 0.699); }
 }
